// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Results View Should display Base, New and Common graphs with replicates 1`] = `
<section
  aria-label="Revision Row Details"
  class="MuiBox-root css-13s8wtg"
  id="_r_af_"
>
  <div
    class="MuiStack-root css-1714cpj-MuiStack-root"
  >
    <b>
      linux1804-64-shippable-qr
    </b>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
    />
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-13620ud-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1p37y3n-MuiGrid-root"
      >
        <div
          class="MuiStack-root css-1ucnu3w-MuiStack-root"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 css-1mx3ha4-MuiTypography-root"
            id="retrigger-modal-title"
          >
            Runs Density Distribution
          </h3>
          <div
            class="MuiBox-root css-72fd9l"
          >
            chartjs-line
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-4 css-1mppd14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b4085i-MuiGrid-root"
            >
              <div>
                <b>
                  Base
                  :
                </b>
                 
                595.73
                 
                 (
                firefox
                )
              </div>
              <div
                class="fzzwjz3"
              >
                <div>
                  587.15
                </div>
                <div>
                  593.04
                </div>
                <div>
                  600.7
                </div>
                <div>
                  602.04
                </div>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-13hwqcr-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Copy results
                </button>
              </div>
              <div>
                <b>
                  Mean
                </b>
                :
                 
                595.73
                ,
                 
                <b>
                  Median
                </b>
                :
                 
                596.87
              </div>
              <div
                class="fnujpat"
              >
                6.96  = 1.17% standard deviation
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b4085i-MuiGrid-root"
            >
              <div>
                <b>
                  New
                  :
                </b>
                 
                605.83
                 
                 (
                chrome
                )
              </div>
              <div
                class="fzzwjz3"
              >
                <div>
                  605.16
                </div>
                <div>
                  605.31
                </div>
                <div>
                  605.61
                </div>
                <div>
                  605.81
                </div>
                <div>
                  607.27
                </div>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-13hwqcr-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Copy results
                </button>
              </div>
              <div>
                <b>
                  Mean
                </b>
                :
                 
                605.83
                ,
                 
                <b>
                  Median
                </b>
                :
                 
                605.61
              </div>
              <div
                class="fnujpat"
              >
                0.84  = 0.14% standard deviation
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-14eavsq-MuiGrid-root"
      >
        <div>
          <div>
            Only one run (consider more runs for greater confidence).
             
          </div>
          <div>
            <b>
              Base application
            </b>
            : 
            firefox
             
          </div>
          <div>
            <b>
              New application
            </b>
            : 
            chrome
             
          </div>
          <div
            class="MuiBox-root css-1yf3lzr"
          >
            <b>
              Comparison result
            </b>
            :
             
             
            (
            lower
             is better)
          </div>
          <div
            class="MuiBox-root css-epvm6"
          >
            <b>
              Difference of means
            </b>
            : 
            1.7
            % (
            10.1
            )
          </div>
          <div
            class="MuiBox-root css-epvm6"
          >
            <b>
              Difference of medians
            </b>
            : 
            1.46
            % (
            8.74
            )
          </div>
          <div>
            <div
              class="MuiBox-root css-epvm6"
            >
              <b>
                Confidence
              </b>
              : 
              Low
               (2.89)
            </div>
            <div
              class="MuiBox-root css-bewn4"
            >
              <b>
                **Note
              </b>
              : 
              The results were obtained using the Student’s T-test. A T-value exceeding 5 indicates high confidence, values between 3 and 5 suggest medium confidence, and values below 3 reflect low confidence.
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
    />
    <div
      class="MuiStack-root css-nen11g-MuiStack-root"
    >
      <div
        style="display: flex;"
      />
    </div>
  </div>
</section>
`;

exports[`Results View Should display Base, New and Common graphs with replicates: Dataset for scatter 1`] = `
{
  "backgroundColor": [Function],
  "data": [
    {
      "x": 587.15,
      "y": "Base",
    },
    {
      "x": 593.04,
      "y": "Base",
    },
    {
      "x": 600.7,
      "y": "Base",
    },
    {
      "x": 602.04,
      "y": "Base",
    },
    {
      "x": 605.16,
      "y": "New",
    },
    {
      "x": 605.31,
      "y": "New",
    },
    {
      "x": 605.61,
      "y": "New",
    },
    {
      "x": 605.81,
      "y": "New",
    },
    {
      "x": 607.27,
      "y": "New",
    },
  ],
  "pointRadius": 7,
  "pointStyle": "triangle",
  "type": "scatter",
  "yAxisID": "yValues",
}
`;

exports[`Results View Should display Base, New and Common graphs with tooltips 1`] = `
<section
  aria-label="Revision Row Details"
  class="MuiBox-root css-13s8wtg"
  id="_r_93_"
>
  <div
    class="MuiStack-root css-1714cpj-MuiStack-root"
  >
    <b>
      linux1804-64-shippable-qr
    </b>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
    />
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-13620ud-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1p37y3n-MuiGrid-root"
      >
        <div
          class="MuiStack-root css-1ucnu3w-MuiStack-root"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 css-1mx3ha4-MuiTypography-root"
            id="retrigger-modal-title"
          >
            Runs Density Distribution
          </h3>
          <div
            class="MuiBox-root css-72fd9l"
          >
            chartjs-line
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-4 css-1mppd14-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b4085i-MuiGrid-root"
            >
              <div>
                <b>
                  Base
                  :
                </b>
                 
                595.73
                 
                 (
                firefox
                )
              </div>
              <div
                class="fzzwjz3"
              >
                <div>
                  587.15
                </div>
                <div>
                  593.04
                </div>
                <div>
                  600.7
                </div>
                <div>
                  602.04
                </div>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-13hwqcr-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Copy results
                </button>
              </div>
              <div>
                <b>
                  Mean
                </b>
                :
                 
                595.73
                ,
                 
                <b>
                  Median
                </b>
                :
                 
                596.87
              </div>
              <div
                class="fnujpat"
              >
                6.96  = 1.17% standard deviation
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-1b4085i-MuiGrid-root"
            >
              <div>
                <b>
                  New
                  :
                </b>
                 
                605.83
                 
                 (
                chrome
                )
              </div>
              <div
                class="fzzwjz3"
              >
                <div>
                  605.16
                </div>
                <div>
                  605.31
                </div>
                <div>
                  605.61
                </div>
                <div>
                  605.81
                </div>
                <div>
                  607.27
                </div>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-13hwqcr-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Copy results
                </button>
              </div>
              <div>
                <b>
                  Mean
                </b>
                :
                 
                605.83
                ,
                 
                <b>
                  Median
                </b>
                :
                 
                605.61
              </div>
              <div
                class="fnujpat"
              >
                0.84  = 0.14% standard deviation
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-14eavsq-MuiGrid-root"
      >
        <div>
          <div>
            Only one run (consider more runs for greater confidence).
             
          </div>
          <div>
            <b>
              Base application
            </b>
            : 
            firefox
             
          </div>
          <div>
            <b>
              New application
            </b>
            : 
            chrome
             
          </div>
          <div
            class="MuiBox-root css-1yf3lzr"
          >
            <b>
              Comparison result
            </b>
            :
             
             
            (
            lower
             is better)
          </div>
          <div
            class="MuiBox-root css-epvm6"
          >
            <b>
              Difference of means
            </b>
            : 
            1.7
            % (
            10.1
            )
          </div>
          <div
            class="MuiBox-root css-epvm6"
          >
            <b>
              Difference of medians
            </b>
            : 
            1.46
            % (
            8.74
            )
          </div>
          <div>
            <div
              class="MuiBox-root css-epvm6"
            >
              <b>
                Confidence
              </b>
              : 
              Low
               (2.89)
            </div>
            <div
              class="MuiBox-root css-bewn4"
            >
              <b>
                **Note
              </b>
              : 
              The results were obtained using the Student’s T-test. A T-value exceeding 5 indicates high confidence, values between 3 and 5 suggest medium confidence, and values below 3 reflect low confidence.
               
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
    />
    <div
      class="MuiStack-root css-nen11g-MuiStack-root"
    >
      <div
        style="display: flex;"
      />
    </div>
  </div>
</section>
`;

exports[`Results View Should display Base, New and Common graphs with tooltips: Dataset for scatter 1`] = `
{
  "backgroundColor": [Function],
  "data": [
    {
      "x": 587.15,
      "y": "Base",
    },
    {
      "x": 593.04,
      "y": "Base",
    },
    {
      "x": 600.7,
      "y": "Base",
    },
    {
      "x": 602.04,
      "y": "Base",
    },
    {
      "x": 605.16,
      "y": "New",
    },
    {
      "x": 605.31,
      "y": "New",
    },
    {
      "x": 605.61,
      "y": "New",
    },
    {
      "x": 605.81,
      "y": "New",
    },
    {
      "x": 607.27,
      "y": "New",
    },
  ],
  "pointRadius": 7,
  "pointStyle": "triangle",
  "type": "scatter",
  "yAxisID": "yValues",
}
`;

exports[`Results View Should update url with new title and the table with the new title: After clicking the Save button 1`] = `
<form
  aria-label="edit results table title"
  class="edit-title-form"
>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth css-1l7yi17-MuiFormControl-root"
  >
    <div
      class="MuiFormControl-root MuiTextField-root edit-results-title-text-field css-1me4ib9-MuiFormControl-root-MuiTextField-root"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-nxnc2c-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          aria-label="Write a title for this comparison"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1y5dgo3-MuiInputBase-input-MuiOutlinedInput-input"
          id="results-title-input"
          placeholder="Write a title for this comparison"
          type="text"
          value="New title"
        />
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-1nf2c5d-MuiNotchedOutlined-root"
          >
            <span
              aria-hidden="true"
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="edit-title-btns MuiBox-root css-58oy1n"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-lnmpyd-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation Mui-focusVisible MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-lnmpyd-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="submit"
      >
        Save
        <span
          class="MuiTouchRipple-root css-r3djoj-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</form>
`;

exports[`Results View The table should match snapshot and other elements should be present in the page 1`] = `
<div
  class="MuiBox-root css-hshm0p"
  data-testid="results-table"
  role="table"
>
  <div
    class="MuiBox-root css-1rw0zd7"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 f1wpas00 css-13620ud-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-md-4 MuiGrid-grid-xs-12 css-1mujxwq-MuiGrid-root"
      >
        <form
          aria-label="Search by title, platform, revision or options"
          class="MuiBox-root css-1wxqtyp"
        >
          <div
            class="MuiFormControl-root MuiTextField-root css-q16m8p-MuiFormControl-root-MuiTextField-root"
            data-mui-internal-clone-element="true"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiInputBase-adornedEnd css-1cqjfkd-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-1nowbqt-MuiInputAdornment-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                  data-testid="SearchIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                  />
                </svg>
              </div>
              <input
                aria-description="Tip: You can search with multiple words (all must match). Use -word to exclude results containing that word."
                aria-invalid="false"
                aria-label="Search by title, platform, revision or options"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-3v3un6-MuiInputBase-input-MuiOutlinedInput-input"
                id="_r_g_"
                placeholder="Filter results"
                type="search"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-elo8k2-MuiInputAdornment-root"
              >
                <button
                  aria-label="Clear the search input"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeSmall css-13mnts1-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                    data-testid="CloseIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1nf2c5d-MuiNotchedOutlined-root"
                >
                  <span
                    aria-hidden="true"
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </form>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-md-2 MuiGrid-grid-xs-6 css-4yvdwt-MuiGrid-root"
      >
        <div
          class="MuiFormControl-root css-7549ua-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall framework-dropdown-select MuiSelect-root css-fcr66i-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            data-testid="framework-select"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Framework"
              aria-labelledby="mui-component-select-framework"
              class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1hw1663-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
              id="mui-component-select-framework"
              role="combobox"
              tabindex="0"
            >
              build_metrics
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              name="framework"
              tabindex="-1"
              value="2"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-h42w4p-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1nf2c5d-MuiNotchedOutlined-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-md-2 MuiGrid-grid-xs-6 css-4yvdwt-MuiGrid-root"
      >
        <div
          class="MuiFormControl-root css-7549ua-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall test-version-select MuiSelect-root css-fcr66i-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            data-testid="test-version-select"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Stats Test Version"
              aria-labelledby="test-version-type mui-component-select-test_version"
              class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1hw1663-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
              id="mui-component-select-test_version"
              role="combobox"
              tabindex="0"
            >
              Student-T
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              name="test_version"
              tabindex="-1"
              value="student-t"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-h42w4p-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1nf2c5d-MuiNotchedOutlined-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-t3of1j-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-0"
          data-testid="revision-select"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-sizeSmall f96or0t MuiSelect-root css-fcr66i-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Filter by revision"
              class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1hw1663-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
              role="combobox"
              tabindex="0"
            >
              <div
                class="fbc330 MuiBox-root css-0"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                    data-testid="SortIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 18h6v-2H3zM3 6v2h18V6zm0 7h12v-2H3z"
                    />
                  </svg>
                </svg>
                All revisions
              </div>
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="all-revisions"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-h42w4p-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1nf2c5d-MuiNotchedOutlined-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-t3of1j-MuiGrid-root"
      >
        <div
          class="f6hg2jo"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-disableElevation css-14hwkrj-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Download JSON
          </button>
        </div>
      </div>
    </div>
    <div
      class="f75bkdv f1l733lh"
      data-testid="table-header"
      role="row"
    >
      <div
        class="cell platform-header"
        role="columnheader"
      >
        <button
          aria-haspopup="true"
          aria-label="Platform (Click to filter values)"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation css-l81dbu-MuiButtonBase-root-MuiButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          Platform
          <div
            aria-label="5 items selected"
            class="MuiBox-root css-18uhbjh"
          >
            (
            5
            )
          </div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
            data-testid="KeyboardArrowDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
            />
          </svg>
        </button>
      </div>
      <div
        class="cell base-header"
        role="columnheader"
      >
        <span
          aria-label="A summary of all values from Base runs using a mean."
          class="MuiBox-root css-4g6ai3"
          data-mui-internal-clone-element="true"
        >
          Base
        </span>
      </div>
      <div
        class="cell comparisonSign-header"
        role="columnheader"
      />
      <div
        class="cell new-header"
        role="columnheader"
      >
        <span
          aria-label="A summary of all values from New runs using a mean."
          class="MuiBox-root css-4g6ai3"
          data-mui-internal-clone-element="true"
        >
          New
        </span>
      </div>
      <div
        class="cell status-header"
        role="columnheader"
      >
        <button
          aria-haspopup="true"
          aria-label="Status (Click to filter values)"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation css-l81dbu-MuiButtonBase-root-MuiButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          Status
          <div
            aria-label="3 items selected"
            class="MuiBox-root css-18uhbjh"
          >
            (
            3
            )
          </div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
            data-testid="KeyboardArrowDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
            />
          </svg>
        </button>
      </div>
      <div
        class="cell delta-header"
        role="columnheader"
      >
        <span
          aria-label="The percentage difference between the Base and New values"
          class="MuiBox-root css-4g6ai3"
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Delta (Click to sort by this column)"
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation css-7upxw3-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-10d4m26-MuiSvgIcon-root"
              data-testid="SwapVertIcon"
              focusable="false"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 17.01V10h-2v7.01h-3L15 21l4-3.99zM9 3 5 6.99h3V14h2V6.99h3z"
              />
              <title>
                Not sorted by Delta
              </title>
            </svg>
            Delta
          </button>
        </span>
      </div>
      <div
        class="cell confidence-header"
        role="columnheader"
      >
        <div
          class="MuiButtonGroup-root MuiButtonGroup-contained MuiButtonGroup-horizontal MuiButtonGroup-disableElevation MuiButtonGroup-colorTableHeaderButton css-6gd5sl-MuiButtonGroup-root"
          role="group"
        >
          <button
            aria-label="Confidence (Click to sort by this column)"
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedTableHeaderButton MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedTableHeaderButton MuiButtonGroup-firstButton css-17eldkb-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-54rgmy-MuiSvgIcon-root"
              data-testid="SwapVertIcon"
              focusable="false"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 17.01V10h-2v7.01h-3L15 21l4-3.99zM9 3 5 6.99h3V14h2V6.99h3z"
              />
              <title>
                Not sorted by Confidence
              </title>
            </svg>
          </button>
          <button
            aria-haspopup="true"
            aria-label="Confidence (Click to filter values)"
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedTableHeaderButton MuiButton-root MuiButton-contained MuiButton-containedTableHeaderButton MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorTableHeaderButton MuiButton-disableElevation MuiButtonGroup-lastButton css-l81dbu-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            Confidence
            <div
              aria-label="4 items selected"
              class="MuiBox-root css-18uhbjh"
            >
              (
              4
              )
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
              data-testid="KeyboardArrowDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="cell runs-header"
        role="columnheader"
      >
        <span
          aria-label="The total number of tasks/jobs that ran for this metric."
          class="MuiBox-root css-4g6ai3"
          data-mui-internal-clone-element="true"
        >
          Total Runs
        </span>
      </div>
      <div
        class="cell buttons-header"
        role="columnheader"
      />
      <div
        class="cell expand-header"
        role="columnheader"
      />
    </div>
  </div>
  <div
    data-virtuoso-scroller="true"
    style="position: relative; height: 100px;"
  >
    <div
      data-viewport-type="window"
      style="height: 100%; position: absolute; top: 0px; width: 100%;"
    >
      <div
        data-testid="virtuoso-item-list"
        style="box-sizing: border-box; margin-top: 0px; padding-bottom: 0px; padding-top: 0px;"
      >
        <div
          data-index="0"
          data-item-index="0"
          data-known-size="100"
          style="overflow-anchor: none;"
        >
          <div
            class="f1k5y3nc"
            role="rowgroup"
          >
            <div
              class="fh103jg"
            >
              <div
                class="f195ysgj"
              >
                <strong>
                  <a
                    aria-label="link to suite documentation"
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-l0ho42-MuiTypography-root-MuiLink-root"
                    href="https://firefox-source-docs.mozilla.org/testing/perfdocs/talos.html#a11yr"
                    target="_blank"
                    title="Link to suite documentation  "
                  >
                    a11yr
                  </a>
                   dhtml.html
                </strong>
                 
                <div
                  class="fsudoo"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways f1l733lh css-s8q751-MuiTypography-root-MuiLink-root"
                    href="https://treeherder.mozilla.org/jobs?repo=mozilla-central&revision=spam"
                    target="_blank"
                    title="open treeherder view for spam"
                  >
                    spam
                  </a>
                  <span
                    class="MuiBox-root css-79elbk"
                  >
                    <button
                      aria-label="Copy the revision to the clipboard"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1b34gs1-MuiButtonBase-root-MuiIconButton-root"
                      data-testid="copy-icon"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-6gorna-MuiSvgIcon-root"
                        data-testid="ContentCopyIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2m0 16H8V7h11z"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
              </div>
              <div
                class="fexjzun"
              >
                <span
                  class="f1rpr1m5"
                >
                  opt
                </span>
                <span
                  class="f1rpr1m5"
                >
                  e10s
                </span>
                <span
                  class="f1rpr1m5"
                >
                  fission
                </span>
                <span
                  class="f1rpr1m5"
                >
                  stylo
                </span>
                <span
                  class="f1rpr1m5"
                >
                  webrender
                </span>
              </div>
            </div>
            <div
              class="fw0pvlu"
            >
              <div
                class="revisionRow f1macqb f1dlt78d MuiBox-root css-oluxz7"
                role="row"
              >
                <div
                  class="platform cell"
                  role="cell"
                >
                  <div
                    aria-label="linux1804-64-shippable-qr"
                    class="platform-container"
                    data-mui-internal-clone-element="true"
                    style="cursor: pointer;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 34 34"
                    >
                      <path
                        d="M15.6 8.1c0 .1-.1.1-.1.1h-.1c-.1 0-.1-.1-.2-.2 0 0-.1-.1-.1-.2s0-.1.1-.1l.2.1c.1.1.2.2.2.3m-1.9-1c0-.5-.2-.8-.5-.8 0 0 0 .1-.1.1v.2h.3c0 .2.1.3.1.5h.2m3.6-.5c.2 0 .3.2.4.5h.2c-.1-.1-.1-.2-.1-.3 0-.1 0-.2-.1-.3-.1-.1-.2-.2-.3-.2 0 0-.1.1-.2.1 0 .1.1.1.1.2m-3.1 1.6c-.1 0-.1 0-.1-.1s0-.2.1-.3c.2 0 .3-.1.3-.1.1 0 .1.1.1.1 0 .1-.1.2-.3.4h-.1m-1.1-.1c-.4-.2-.5-.5-.5-1 0-.3 0-.5.2-.7.1-.2.3-.3.5-.3s.3.1.5.3c.1.3.2.6.2.9v.2h.1v-.1c.1 0 .1-.2.1-.6 0-.3 0-.6-.2-.9-.2-.3-.4-.5-.8-.5-.3 0-.6.2-.7.5-.2.4-.2.7-.2 1.2 0 .4.1.8.6 1.2 0-.1.1-.1.2-.2m12.8 14.5c.1 0 .1 0 .1-.1 0-.2-.1-.5-.4-.8-.3-.3-.8-.5-1.4-.6h-.4c-.1 0-.3 0-.4-.1.3-1 .4-1.8.4-2.5 0-1-.2-1.7-.6-2.4-.4-.6-.8-.9-1.3-1-.1.1-.1.1-.1.2.5.2 1 .6 1.3 1.2.3.7.4 1.3.4 2.1 0 .6-.1 1.4-.5 2.5-.4.2-.8.5-1.1 1.1 0 .1 0 .1.1.1 0 0 .1-.1.2-.3l.5-.5c.3-.2.5-.3.8-.3.5 0 1 .1 1.3.2.4.1.6.3.7.4.1.2.2.3.3.4 0 .3.1.4.1.4M16.5 7.7c-.1-.1-.1-.3-.1-.5 0-.4 0-.6.2-.9.2-.2.4-.3.6-.3.3 0 .5.2.7.4.1.3.2.5.2.8 0 .5-.2.8-.6.9 0 0 .1.1.2.1.2 0 .3.1.5.2.1-.6.2-1 .2-1.5 0-.6-.1-1-.3-1.3-.3-.3-.6-.4-1-.4-.3 0-.6.1-.9.3-.2.3-.3.5-.3.8 0 .5.1.9.3 1.3.1 0 .2.1.3.1m1.2 1.7c-1.3.9-2.4 1.3-3.2 1.3-.7 0-1.4-.3-2.1-.8.1.2.2.4.3.5l.6.6c.4.4.9.6 1.4.6.7 0 1.5-.4 2.6-1.1l.9-.6c.2-.2.4-.4.4-.7 0-.1 0-.2-.1-.2 0-.3-.5-.6-1.5-.9-.9-.4-1.6-.6-2.1-.6-.3 0-.8.2-1.5.6-.6.4-1 .8-1 1.2 0 0 .1.1.2.3.6.5 1.2.8 1.8.8.8 0 1.8-.4 3.2-1.4v.2c.1.1.1.2.1.2m2.4 20.7c.4.8 1.1 1.2 1.9 1.2.2 0 .4 0 .6-.1.2 0 .4-.1.5-.2.1-.1.2-.1.3-.2.2-.1.2-.1.3-.2l1.7-1.5c.4-.3.8-.6 1.3-.9l1-.5c.3-.1.5-.2.7-.4.1-.2.2-.3.2-.6s-.2-.5-.4-.7c-.2-.2-.4-.3-.6-.3-.2-.1-.4-.2-.7-.5-.2-.3-.4-.6-.5-1.1l-.1-.6c-.1-.3-.1-.5-.2-.6H26c-.1 0-.3.1-.4.3l-.6.6c-.1.2-.4.4-.6.6-.3.2-.6.3-.8.3-.8 0-1.2-.2-1.5-.7-.2-.3-.3-.7-.4-1.1-.2-.2-.3-.3-.5-.3-.5 0-.7.5-.7 1.6V27.3c0 .1-.1.3-.1.6-.1.3-.1.7-.1 1.1l-.2 1.1m-14.9-.6c1 .1 2.1.4 3.3.9 1.2.5 2 .7 2.3.7.7 0 1.3-.3 1.8-.9.1-.2.1-.4.1-.7 0-1-.6-2.2-1.8-3.7l-.7-.9c-.1-.2-.3-.5-.5-.9s-.4-.7-.6-.9c-.1-.2-.3-.5-.6-.7-.3-.2-.6-.4-.9-.5-.4.1-.7.2-.9.4s-.2.4-.2.6c0 .2-.1.4-.2.4-.1.1-.3.1-.5.2h-.6c-.5 0-.9.1-1.1.2-.3.3-.4.6-.4 1 0 .2 0 .4.1.8s.1.7.1.9c0 .4-.1.8-.4 1.3-.3.4-.4.8-.4 1 .2.4.9.7 2.1.8m3.4-9.3c0-.7.2-1.5.6-2.4.4-.9.7-1.5 1.1-1.9 0-.1-.1-.1-.2-.1l-.1-.2c-.3.3-.7 1-1.1 2.1-.4.9-.7 1.8-.7 2.4 0 .5.1.9.3 1.2.2.3.8.8 1.6 1.5l1.1.7c1.2 1 1.8 1.7 1.8 2.1 0 .2-.1.4-.4.7-.2.2-.5.4-.7.4v.1l.3.6c.4.6 1.4.9 2.6.9 2.3 0 4-.9 5.3-2.8 0-.5 0-.8-.1-1v-.4c0-.7.1-1.2.3-1.5.2-.3.4-.5.7-.5.2 0 .4.1.6.2.1-.8.1-1.5.1-2.1 0-.9 0-1.7-.2-2.4-.1-.6-.3-1.1-.5-1.5l-.6-.9c-.2-.3-.3-.6-.5-.9-.1-.4-.2-.7-.2-1.2-.3-.5-.5-1-.8-1.5-.2-.5-.4-1-.6-1.4l-.9.7c-1 .7-1.8 1-2.6 1-.6 0-1.1-.1-1.4-.5l-.6-.5c0 .3-.1.7-.3 1.1l-.6 1.2c-.3.7-.4 1.1-.5 1.4 0 .2-.1.4-.1.4l-.8 1.5c-.8 1.5-1.3 3-1.3 4.1 0 .2 0 .5.1.7-.5-.3-.7-.7-.7-1.3m7.4 9.7c-1.3 0-2.4.2-3.1.5-.5.6-1.1.9-1.9.9-.5 0-1.3-.2-2.4-.6-1.1-.4-2-.7-2.9-.8-.1 0-.3-.1-.6-.1s-.6-.1-.8-.1c-.2 0-.5-.1-.7-.2-.3-.1-.5-.2-.6-.3-.1-.1-.2-.3-.2-.4 0-.2 0-.3.1-.5s.2-.3.3-.4c.1-.1.1-.2.2-.3.1-.1.1-.2.1-.3 0-.1.1-.2.1-.3v-.3s0-.4-.1-1c-.1-.5-.1-.9-.1-1 0-.5.1-.8.3-1.1.2-.3.4-.4.7-.4h1.2c.1 0 .2-.1.5-.2.1-.2.1-.3.2-.4.1-.1.1-.2.1-.3 0-.1 0-.1.1-.2 0-.1.1-.2.2-.2-.1-.1-.1-.2-.1-.4v-.3c0-.4.2-.9.5-1.6l.4-.6.7-1.4c.2-.4.4-1 .6-1.8.2-.7.6-1.4 1.2-2.2l.8-.9c.5-.6.9-1.1 1.1-1.5.2-.4.3-.9.3-1.3 0-.2-.1-.8-.2-1.8s-.2-2.1-.2-3c0-.7.1-1.2.2-1.7s.4-1 .7-1.4c.3-.4.7-.8 1.3-1 .6-.2 1.3-.3 2.2-.3.3 0 .6 0 .9.1.3 0 .7.1 1.2.3.4.2.8.4 1.1.7.2.2.6.7.9 1.2.2.6.4 1.2.5 2.1.1.5.1 1 .2 1.7 0 .6.1 1 .1 1.3.1.3.1.7.2 1.2.1.4.2.8.4 1.1.2.4.4.8.7 1.2.3.5.7 1 1.1 1.6.9 1 1.6 2.2 2.1 3.3.5 1 .8 2.4.8 3.8 0 .7-.1 1.4-.3 2.1.2 0 .3.1.4.2s.2.5.3.9l.1.8c.1.2.2.4.5.6.2.2.4.3.7.5.2.1.5.2.7.4.2.2.3.4.3.6 0 .3-.1.6-.3.8-.2.2-.4.3-.7.4l-1.2.6c-.5.3-1 .7-1.5 1.1l-1 .9c-.4.4-.8.7-1.1.9-.3.2-.7.3-1.1.3l-.7-.1c-.8-.2-1.3-.6-1.6-1.3-1.8 0-3.1-.1-3.9-.1"
                      />
                    </svg>
                    <span>
                      Linux 18.04
                    </span>
                  </div>
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  776.97 ms
                </div>
                <div
                  class="comparison-sign cell"
                  role="cell"
                >
                  &lt;
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  791.34 ms
                </div>
                <div
                  class="status cell"
                  role="cell"
                >
                  <div
                    class="status-hint status-hint-regression MuiBox-root css-ucc9gw"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-r7hube-MuiSvgIcon-root"
                      data-testid="ThumbDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v2c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2m4 0v12h4V3z"
                      />
                    </svg>
                    Regression
                  </div>
                </div>
                <div
                  class="delta cell"
                  role="cell"
                >
                   
                   1.85 % 
                </div>
                <div
                  class="confidence cell"
                  role="cell"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16zwf6a-MuiSvgIcon-root"
                    data-testid="DragHandleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 9H4v2h16zM4 15h16v-2H4z"
                    />
                  </svg>
                  Medium
                </div>
                <div
                  class="total-runs cell"
                  role="cell"
                >
                  <span>
                    <span
                      title="Base runs"
                    >
                      B:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                  <span>
                    <span
                      title="New runs"
                    >
                      N:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                </div>
                <div
                  class="row-buttons cell"
                >
                  <div
                    class="graph"
                    role="cell"
                  >
                    <div
                      class="graph-link-button-container"
                    >
                      <a
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        href="https://treeherder.mozilla.org/perfherder/graphs?highlightedRevisions=1e32960788ea&highlightedRevisions=6a1f133815a1&series=mozilla-central%2Cedcc6311f15bdf7924ef3f0ccfd8b47ce1892212%2C1%2C1&timerange=5184000"
                        tabindex="0"
                        target="_blank"
                        title="open the evolution graph for this job in treeherder"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="TimelineIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M23 8c0 1.1-.9 2-2 2-.18 0-.35-.02-.51-.07l-3.56 3.55c.05.16.07.34.07.52 0 1.1-.9 2-2 2s-2-.9-2-2c0-.18.02-.36.07-.52l-2.55-2.55c-.16.05-.34.07-.52.07s-.36-.02-.52-.07l-4.55 4.56c.05.16.07.33.07.51 0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2c.18 0 .35.02.51.07l4.56-4.55C8.02 9.36 8 9.18 8 9c0-1.1.9-2 2-2s2 .9 2 2c0 .18-.02.36-.07.52l2.55 2.55c.16-.05.34-.07.52-.07s.36.02.52.07l3.55-3.56C19.02 8.35 19 8.18 19 8c0-1.1.9-2 2-2s2 .9 2 2"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                  <div
                    class="retrigger-button"
                    data-testid="retrigger-jobs-button"
                    role="cell"
                  >
                    <div
                      class="retrigger-button-container"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        title="retrigger jobs"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="RefreshOutlinedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="cell MuiBox-root css-172osot"
                  role="cell"
                >
                  <div
                    class="expand-button-container"
                    data-testid="expand-revision-button"
                  >
                    <button
                      aria-controls="_r_13_"
                      aria-expanded="false"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      title="expand this row"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                        data-testid="ExpandMoreIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="revisionRow f1macqb f1dlt78d MuiBox-root css-oluxz7"
                role="row"
              >
                <div
                  class="platform cell"
                  role="cell"
                >
                  <div
                    aria-label="macosx1015-64-shippable-qr"
                    class="platform-container"
                    data-mui-internal-clone-element="true"
                    style="cursor: pointer;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                      data-testid="AppleIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"
                      />
                    </svg>
                    <span>
                      macOS 10.15
                    </span>
                  </div>
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  704.84 ms
                </div>
                <div
                  class="comparison-sign cell"
                  role="cell"
                >
                  &lt;
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  712.44 ms
                </div>
                <div
                  class="status cell"
                  role="cell"
                >
                  <div
                    class="status-hint status-hint-improvement MuiBox-root css-1h9ue86"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-p35293-MuiSvgIcon-root"
                      data-testid="ThumbUpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M1 21h4V9H1zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73z"
                      />
                    </svg>
                    Improvement
                  </div>
                </div>
                <div
                  class="delta cell"
                  role="cell"
                >
                   
                   1.08 % 
                </div>
                <div
                  class="confidence cell"
                  role="cell"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-qms0sm-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                  Low
                </div>
                <div
                  class="total-runs cell"
                  role="cell"
                >
                  <span>
                    <span
                      title="Base runs"
                    >
                      B:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                  <span>
                    <span
                      title="New runs"
                    >
                      N:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                </div>
                <div
                  class="row-buttons cell"
                >
                  <div
                    class="graph"
                    role="cell"
                  >
                    <div
                      class="graph-link-button-container"
                    >
                      <a
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        href="https://treeherder.mozilla.org/perfherder/graphs?highlightedRevisions=1e32960788ea&highlightedRevisions=6a1f133815a1&series=mozilla-central%2C9daea6258ae244039eb2390f3eab7935994cbb0e%2C1%2C1&timerange=5184000"
                        tabindex="0"
                        target="_blank"
                        title="open the evolution graph for this job in treeherder"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="TimelineIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M23 8c0 1.1-.9 2-2 2-.18 0-.35-.02-.51-.07l-3.56 3.55c.05.16.07.34.07.52 0 1.1-.9 2-2 2s-2-.9-2-2c0-.18.02-.36.07-.52l-2.55-2.55c-.16.05-.34.07-.52.07s-.36-.02-.52-.07l-4.55 4.56c.05.16.07.33.07.51 0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2c.18 0 .35.02.51.07l4.56-4.55C8.02 9.36 8 9.18 8 9c0-1.1.9-2 2-2s2 .9 2 2c0 .18-.02.36-.07.52l2.55 2.55c.16-.05.34-.07.52-.07s.36.02.52.07l3.55-3.56C19.02 8.35 19 8.18 19 8c0-1.1.9-2 2-2s2 .9 2 2"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                  <div
                    class="retrigger-button"
                    data-testid="retrigger-jobs-button"
                    role="cell"
                  >
                    <div
                      class="retrigger-button-container"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        title="retrigger jobs"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="RefreshOutlinedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="cell MuiBox-root css-172osot"
                  role="cell"
                >
                  <div
                    class="expand-button-container"
                    data-testid="expand-revision-button"
                  >
                    <button
                      aria-controls="_r_1a_"
                      aria-expanded="false"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      title="expand this row"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                        data-testid="ExpandMoreIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="revisionRow f1macqb f1dlt78d MuiBox-root css-oluxz7"
                role="row"
              >
                <div
                  class="platform cell"
                  role="cell"
                >
                  <div
                    aria-label="windows10-64-qr"
                    class="platform-container"
                    data-mui-internal-clone-element="true"
                    style="cursor: pointer;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 30 30"
                    >
                      <path
                        d="M13.875 7.719l-2.281 7.906s-2.594-1.813-4.5-1.625c-1.875 0.188-4.406 1.125-4.406 1.125l2.313-7.969s4.781-2.563 8.875 0.563zM12.813 16.375l2.281-7.844c0.688 0.469 1.906 1.313 3.875 1.563 1.969 0.219 5.031-1.031 5.031-1.031l-2.281 7.906c-0.344 0.125-1.781 0.938-4.406 1.094-2.656 0.156-4.5-1.688-4.5-1.688zM0 24.469l2.281-7.969s2.563-1.188 4.719-1.031c2.125 0.125 3.844 1.313 4.188 1.594l-2.281 7.969s-2.625-1.719-4.438-1.563-3.406 0.469-4.469 1zM10.125 25.719l2.281-7.906s2.438 1.594 4.031 1.531c1.594-0.031 2.688-0.125 4.844-0.969h0.031c-0.156 0.406-2.281 7.844-2.281 7.844s-2.5 1.188-4.813 1.063c-2.281-0.094-3.656-1.406-4.094-1.563z"
                      />
                       
                    </svg>
                    <span>
                      Windows 10
                    </span>
                  </div>
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  643.54 ms
                </div>
                <div
                  class="comparison-sign cell"
                  role="cell"
                >
                  &gt;
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  628.09 ms
                </div>
                <div
                  class="status cell"
                  role="cell"
                >
                  <div
                    class="status-hint MuiBox-root css-1dj4wrv"
                  >
                    -
                  </div>
                </div>
                <div
                  class="delta cell"
                  role="cell"
                >
                   
                   -24 % 
                </div>
                <div
                  class="confidence cell"
                  role="cell"
                >
                  -
                </div>
                <div
                  class="total-runs cell"
                  role="cell"
                >
                  <span>
                    <span
                      title="Base runs"
                    >
                      B:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                  <span>
                    <span
                      title="New runs"
                    >
                      N:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                </div>
                <div
                  class="row-buttons cell"
                >
                  <div
                    class="graph"
                    role="cell"
                  >
                    <div
                      class="graph-link-button-container"
                    >
                      <a
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        href="https://treeherder.mozilla.org/perfherder/graphs?highlightedRevisions=1e32960788ea&highlightedRevisions=6a1f133815a1&series=mozilla-central%2C3a6d4b6178678c3113c980b378bb83b2629926a0%2C1%2C1&timerange=5184000"
                        tabindex="0"
                        target="_blank"
                        title="open the evolution graph for this job in treeherder"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="TimelineIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M23 8c0 1.1-.9 2-2 2-.18 0-.35-.02-.51-.07l-3.56 3.55c.05.16.07.34.07.52 0 1.1-.9 2-2 2s-2-.9-2-2c0-.18.02-.36.07-.52l-2.55-2.55c-.16.05-.34.07-.52.07s-.36-.02-.52-.07l-4.55 4.56c.05.16.07.33.07.51 0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2c.18 0 .35.02.51.07l4.56-4.55C8.02 9.36 8 9.18 8 9c0-1.1.9-2 2-2s2 .9 2 2c0 .18-.02.36-.07.52l2.55 2.55c.16-.05.34-.07.52-.07s.36.02.52.07l3.55-3.56C19.02 8.35 19 8.18 19 8c0-1.1.9-2 2-2s2 .9 2 2"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                  <div
                    class="retrigger-button"
                    data-testid="retrigger-jobs-button"
                    role="cell"
                  >
                    <div
                      class="retrigger-button-container"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        title="retrigger jobs"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="RefreshOutlinedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="cell MuiBox-root css-172osot"
                  role="cell"
                >
                  <div
                    class="expand-button-container"
                    data-testid="expand-revision-button"
                  >
                    <button
                      aria-controls="_r_1h_"
                      aria-expanded="false"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      title="expand this row"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                        data-testid="ExpandMoreIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="revisionRow f1macqb f1dlt78d MuiBox-root css-oluxz7"
                role="row"
              >
                <div
                  class="platform cell"
                  role="cell"
                >
                  <div
                    aria-label="windows10-64-shippable-qr"
                    class="platform-container"
                    data-mui-internal-clone-element="true"
                    style="cursor: pointer;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 30 30"
                    >
                      <path
                        d="M13.875 7.719l-2.281 7.906s-2.594-1.813-4.5-1.625c-1.875 0.188-4.406 1.125-4.406 1.125l2.313-7.969s4.781-2.563 8.875 0.563zM12.813 16.375l2.281-7.844c0.688 0.469 1.906 1.313 3.875 1.563 1.969 0.219 5.031-1.031 5.031-1.031l-2.281 7.906c-0.344 0.125-1.781 0.938-4.406 1.094-2.656 0.156-4.5-1.688-4.5-1.688zM0 24.469l2.281-7.969s2.563-1.188 4.719-1.031c2.125 0.125 3.844 1.313 4.188 1.594l-2.281 7.969s-2.625-1.719-4.438-1.563-3.406 0.469-4.469 1zM10.125 25.719l2.281-7.906s2.438 1.594 4.031 1.531c1.594-0.031 2.688-0.125 4.844-0.969h0.031c-0.156 0.406-2.281 7.844-2.281 7.844s-2.5 1.188-4.813 1.063c-2.281-0.094-3.656-1.406-4.094-1.563z"
                      />
                       
                    </svg>
                    <span>
                      Windows 10
                    </span>
                  </div>
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  643.54 ms
                </div>
                <div
                  class="comparison-sign cell"
                  role="cell"
                >
                  &gt;
                </div>
                <div
                  class="fmc7z2v cell"
                  role="cell"
                >
                  628.09 ms
                </div>
                <div
                  class="status cell"
                  role="cell"
                >
                  <div
                    class="status-hint MuiBox-root css-1dj4wrv"
                  >
                    -
                  </div>
                </div>
                <div
                  class="delta cell"
                  role="cell"
                >
                   
                   -2.4 % 
                </div>
                <div
                  class="confidence cell"
                  role="cell"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1waqt7h-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                  High
                </div>
                <div
                  class="total-runs cell"
                  role="cell"
                >
                  <span>
                    <span
                      title="Base runs"
                    >
                      B:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                  <span>
                    <span
                      title="New runs"
                    >
                      N:
                    </span>
                    <strong>
                      1
                    </strong>
                  </span>
                </div>
                <div
                  class="row-buttons cell"
                >
                  <div
                    class="graph"
                    role="cell"
                  >
                    <div
                      class="graph-link-button-container"
                    >
                      <a
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        href="https://treeherder.mozilla.org/perfherder/graphs?highlightedRevisions=1e32960788ea&highlightedRevisions=6a1f133815a1&series=mozilla-central%2C3a6d4b6178678c3113c980b378bb83b2629926a0%2C1%2C1&timerange=5184000"
                        tabindex="0"
                        target="_blank"
                        title="open the evolution graph for this job in treeherder"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="TimelineIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M23 8c0 1.1-.9 2-2 2-.18 0-.35-.02-.51-.07l-3.56 3.55c.05.16.07.34.07.52 0 1.1-.9 2-2 2s-2-.9-2-2c0-.18.02-.36.07-.52l-2.55-2.55c-.16.05-.34.07-.52.07s-.36-.02-.52-.07l-4.55 4.56c.05.16.07.33.07.51 0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2c.18 0 .35.02.51.07l4.56-4.55C8.02 9.36 8 9.18 8 9c0-1.1.9-2 2-2s2 .9 2 2c0 .18-.02.36-.07.52l2.55 2.55c.16-.05.34-.07.52-.07s.36.02.52.07l3.55-3.56C19.02 8.35 19 8.18 19 8c0-1.1.9-2 2-2s2 .9 2 2"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                  <div
                    class="retrigger-button"
                    data-testid="retrigger-jobs-button"
                    role="cell"
                  >
                    <div
                      class="retrigger-button-container"
                    >
                      <button
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                        tabindex="0"
                        title="retrigger jobs"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                          data-testid="RefreshOutlinedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="cell MuiBox-root css-172osot"
                  role="cell"
                >
                  <div
                    class="expand-button-container"
                    data-testid="expand-revision-button"
                  >
                    <button
                      aria-controls="_r_1o_"
                      aria-expanded="false"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-1pgb59k-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      title="expand this row"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                        data-testid="ExpandMoreIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Results View renders framework dropdown in closed condition 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-label="Framework"
  aria-labelledby="mui-component-select-framework"
  class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1hw1663-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
  id="mui-component-select-framework"
  role="combobox"
  tabindex="0"
>
  build_metrics
</div>
`;

exports[`Results View renders test version dropdown defaults to student-t test 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-label="Stats Test Version"
  aria-labelledby="test-version-type mui-component-select-test_version"
  class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1hw1663-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
  id="mui-component-select-test_version"
  role="combobox"
  tabindex="0"
>
  Student-T
</div>
`;

exports[`Results View renders test version dropdown in closed condition 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-label="Stats Test Version"
  aria-labelledby="test-version-type mui-component-select-test_version"
  class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1hw1663-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
  id="mui-component-select-test_version"
  role="combobox"
  tabindex="0"
>
  Student-T
</div>
`;
